--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,8 @@
-@import "~react-vis/dist/style";
 
+* {
+  color: black;
+  font-family: 'Roboto Condensed', sans-serif;
+}
 .hide {
   display: none!important;
 }
@@ -18,10 +21,12 @@
 
   input {
     //color: rgba(100, 250, 250, 1);
+
     border-radius: 5px;
     height: 6vw;
-    max-width: 400px;
-    width: 80vw;
+    max-height: 80px;
+    //max-width: 80vw;
+    transition: all 0.1s linear;
     min-height: 50px;
     font-size: 20px;
     font-weight: bold;
@@ -30,16 +35,21 @@
     text-align: center;
     border: none;
     background-color: transparent;
-    border-bottom: 2px solid #a28d41;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     &:focus {
+      outline: none;
+    }
+    &:hover {
+      cursor: pointer;
       outline: none;
     }
   }
 }
 
 .react-datepicker__month-container {
-  max-width: 400px;
-  width: 80vw;
+  max-width: 600px;
+  width: 85vw;
+  min-height: 300px;
 }
 
 .react-datepicker {
@@ -47,7 +57,7 @@
 }
 
 .react-datepicker-popper {
-  left: unset;
+  left: 8%!important;
 }
 
 .VictoryContainer {
