--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -22,17 +22,14 @@
 
   input {
     //color: rgba(100, 250, 250, 1);
-
-    border-radius: 5px;
     height: 6vw;
     max-height: 80px;
     //max-width: 80vw;
-    transition: all 0.1s linear;
     min-height: 50px;
     font-size: 20px;
     font-weight: bold;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-
+    transition: all 0.1s linear;
     text-align: center;
     border: none;
     background-color: transparent;
@@ -41,8 +38,11 @@
       outline: none;
     }
     &:hover {
+      background: #c8bbbb;
+      //color: white;
+      transform: scale(1.01);
+      //border-bottom: 3px solid rgba(0, 0, 0, 0.6);
       cursor: pointer;
-      outline: none;
     }
   }
 }
